force-app/main/default/objects/Distribution_Channel__c/Distribution_Channel__c.object-meta.xml
<CustomObject>
    <description>Distribution endpoints used by the Publishing Kiosk to release content.</description>
    <label>Distribution Channel</label>
    <nameField>
        <displayFormat>DC-{0000}</displayFormat>
        <label>Distribution Channel Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Distribution Channels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>