force-app/main/default/objects/Distribution_Channel__c/fields/Publication__c.field-meta.xml
<CustomField>
    <fullName>Publication__c</fullName>
    <label>Publication</label>
    <referenceTo>Publication__c</referenceTo>
    <relationshipLabel>Distribution Channels</relationshipLabel>
    <relationshipName>DistributionChannels</relationshipName>
    <type>Lookup</type>
</CustomField>